--- a/CentroMedico/Views/Registro/Registro.cshtml
+++ b/CentroMedico/Views/Registro/Registro.cshtml
@@ -84,6 +84,18 @@
                         </div>
                     </div>
 
+
+                    <!-- Sexo-->
+                    <div class="fila">
+                        <div class="col-lg-6">
+                            @Html.LabelFor(model => model.sexo, htmlAttributes: new { @class = "control-label col-md-2" })
+                        </div>
+                        <div class="col-lg-6">
+                            @Html.EditorFor(model => model.sexo, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.sexo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
                     <!--Contraseña-->
 
                     <div class="fila">
