Trabajando en la pagina de editar del perfil del paciente

--- a/CentroMedico/Views/Login/Login.cshtml
+++ b/CentroMedico/Views/Login/Login.cshtml
@@ -65,7 +65,7 @@
 
                             <div class="fila">
                                 <div class="col-lg-6">
-                                    @Html.ActionLink("Registrarse", "Registro", "registro")
+                                    @Html.ActionLink("Registrarse", "Registro", "Registro")
                                 </div>
                                 <div class="col-lg-6">
                                     <button type="submit" value="Login">Ingresar</button>
