--- a/CentroMedico/Views/Paciente/Perfil.cshtml
+++ b/CentroMedico/Views/Paciente/Perfil.cshtml
@@ -56,7 +56,7 @@
                     @Html.DisplayFor(model => model.segundo_apellido)
                 </td>
                 <td>
-                    @Html.ActionLink("Editar", "Editar", new { id = Model.id_usuario }) |
+                    @Html.ActionLink("Editar", "Editar", new { id = Model.id_usuario })
                 </td>
             </tr>
 
