--- a/CentroMedico/Content/Paciente.css
+++ b/CentroMedico/Content/Paciente.css
@@ -30,17 +30,23 @@
     float: left;
     padding: 20px;
     text-align: center;
+
 }
 
-
+#formulario-usuario {
+    margin-top: 50px;
+    border: 1px solid black;
+    background: snow;
+    border-radius: 10px;
+}
 
 /****************
      nav bar
-*****************/
-nav ul li {
-    padding: 10px;
-    text-align: center;
-}
+ *****************/
+    nav ul li {
+        padding: 10px;
+        text-align: center;
+    }
 
     nav ul li a {
         display: block;
@@ -67,7 +73,10 @@ footer {
 table {
     width: 100%;
 }
-/*Tablas*/
+/**********
+  Tablas
+
+***********/
 table td, th {
     border: 1px solid #6c757d;
     border-collapse: collapse;
@@ -76,6 +85,38 @@ table td, th {
 th, td {
     padding: 15px;
 }
+
+nav ul li a:hover {
+    background:rgba(90,98,104,1)
+}
+
+
+input[type=email], input[type=text], input[type=password] {
+    width: 100%;
+    text-align: center;
+    border-radius: 10px;
+    vertical-align:central;
+}
+label {
+    width: 150px;
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: black;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+}
+
+input[type=submit] {
+    width: 150px;
+    height: 50px;
+    color: black;
+}
+
 
 /*pantalla grande*/
 
